--- a/Forecasts/City/CityViewController.xib
+++ b/Forecasts/City/CityViewController.xib
@@ -19,22 +19,17 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kTv-Mi-lUj">
-                    <rect key="frame" x="172" y="323" width="31" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nyj-Ok-slb">
-                    <rect key="frame" x="78" y="175" width="240" height="128"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nyj-Ok-slb">
+                    <rect key="frame" x="8" y="8" width="359" height="651"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="0.057025447739999999" blue="0.068362611300000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="kTv-Mi-lUj" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="6fE-AY-diX"/>
-                <constraint firstItem="kTv-Mi-lUj" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="I16-1E-ZaB"/>
+                <constraint firstItem="nyj-Ok-slb" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="6fr-Hm-IOz"/>
+                <constraint firstItem="nyj-Ok-slb" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="8" id="DSw-aU-wK9"/>
+                <constraint firstAttribute="trailing" secondItem="nyj-Ok-slb" secondAttribute="trailing" constant="8" id="UDy-LD-ETk"/>
+                <constraint firstAttribute="bottom" secondItem="nyj-Ok-slb" secondAttribute="bottom" constant="8" id="r0J-B3-BI1"/>
             </constraints>
         </view>
     </objects>
