--- a/Forecasts/Weather/TimeForecastCell/TimeForecastCell.xib
+++ b/Forecasts/Weather/TimeForecastCell/TimeForecastCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="156" id="KGk-i7-Jjw" customClass="TimeForecastCell" customModule="Forecasts" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TimeForecastCell" rowHeight="156" id="KGk-i7-Jjw" customClass="TimeForecastCell" customModule="Forecasts" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="156"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -21,7 +21,9 @@
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="g1X-FO-AyU">
                         <rect key="frame" x="0.0" y="8" width="320" height="139.5"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="139.5" id="feT-jV-Xuc"/>
+                        </constraints>
                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="oGr-uj-x7I">
                             <size key="itemSize" width="50" height="50"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -30,7 +32,7 @@
                         </collectionViewFlowLayout>
                     </collectionView>
                 </subviews>
-                <color key="backgroundColor" red="0.94948432907098834" green="1" blue="0.98289446571571748" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <color key="backgroundColor" red="1" green="0.60119118969999996" blue="0.10783870769999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstItem="g1X-FO-AyU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="7Mf-dw-yLL"/>
                     <constraint firstItem="g1X-FO-AyU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Hud-Mp-EBC"/>
@@ -39,6 +41,9 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="collectionTimeWeather" destination="g1X-FO-AyU" id="5JD-Qg-wXy"/>
+            </connections>
             <point key="canvasLocation" x="132.80000000000001" y="163.71814092953525"/>
         </tableViewCell>
     </objects>
