--- a/Forecasts/Weather/TimeForecastCell/TimeForecastCollectionCell/TimeForecastCollectionCell.xib
+++ b/Forecasts/Weather/TimeForecastCell/TimeForecastCollectionCell/TimeForecastCollectionCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="TimeForecastCollectionCell" customModule="Forecasts" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TimeForecastCollectionCell" id="gTV-IL-0wX" customClass="TimeForecastCollectionCell" customModule="Forecasts" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="207" height="153"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -20,47 +20,49 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ure-iY-XLS">
-                        <rect key="frame" x="0.0" y="0.0" width="207" height="153"/>
+                        <rect key="frame" x="0.0" y="0.0" width="207" height="100"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="J8a-oa-8s1">
-                                <rect key="frame" x="0.0" y="0.0" width="207" height="153"/>
+                                <rect key="frame" x="0.0" y="0.0" width="207" height="100"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aK9-1i-HE5">
-                                        <rect key="frame" x="0.0" y="0.0" width="207" height="51"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="207" height="33.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X46-3K-cjw">
-                                        <rect key="frame" x="0.0" y="51" width="207" height="51"/>
+                                        <rect key="frame" x="0.0" y="33.5" width="207" height="33"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GDk-7E-1MX">
-                                        <rect key="frame" x="0.0" y="102" width="207" height="51"/>
+                                        <rect key="frame" x="0.0" y="66.5" width="207" height="33.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="ObN-9P-XAL"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="J8a-oa-8s1" firstAttribute="top" secondItem="Ure-iY-XLS" secondAttribute="top" id="TcB-rx-mFR"/>
-                            <constraint firstAttribute="bottom" secondItem="J8a-oa-8s1" secondAttribute="bottom" id="fWC-XP-am8"/>
-                            <constraint firstAttribute="trailing" secondItem="J8a-oa-8s1" secondAttribute="trailing" id="hIe-bX-byE"/>
-                            <constraint firstItem="J8a-oa-8s1" firstAttribute="leading" secondItem="Ure-iY-XLS" secondAttribute="leading" id="sIP-CJ-cN3"/>
+                            <constraint firstAttribute="height" constant="100" id="Tvk-Gf-egL"/>
+                            <constraint firstItem="J8a-oa-8s1" firstAttribute="top" secondItem="Ure-iY-XLS" secondAttribute="top" id="fqm-xE-n8v"/>
+                            <constraint firstAttribute="trailing" secondItem="J8a-oa-8s1" secondAttribute="trailing" id="j0c-4s-GkE"/>
+                            <constraint firstItem="J8a-oa-8s1" firstAttribute="leading" secondItem="Ure-iY-XLS" secondAttribute="leading" id="qHg-q9-dsU"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="Ure-iY-XLS" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="VkW-Nu-v2m"/>
-                <constraint firstAttribute="bottom" secondItem="Ure-iY-XLS" secondAttribute="bottom" id="Z8o-FM-041"/>
-                <constraint firstAttribute="trailing" secondItem="Ure-iY-XLS" secondAttribute="trailing" id="aOU-X3-JQt"/>
-                <constraint firstItem="Ure-iY-XLS" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="wih-u1-Wjk"/>
+                <constraint firstItem="Ure-iY-XLS" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="hnJ-0r-3kj"/>
+                <constraint firstAttribute="trailing" secondItem="Ure-iY-XLS" secondAttribute="trailing" id="otd-Nx-gwd"/>
+                <constraint firstItem="Ure-iY-XLS" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="xfw-rQ-Sjv"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="207" height="153"/>
