--- a/Forecasts/Moduls/Weather/DayForecastCell/DayForecastCell.xib
+++ b/Forecasts/Moduls/Weather/DayForecastCell/DayForecastCell.xib
@@ -20,22 +20,22 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Ni4-Ii-FRM">
-                        <rect key="frame" x="0.0" y="8" width="320" height="64.5"/>
+                        <rect key="frame" x="8" y="8" width="304" height="64.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="day" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mKj-QJ-DDx">
-                                <rect key="frame" x="0.0" y="22" width="106.5" height="20.5"/>
+                                <rect key="frame" x="0.0" y="22" width="101.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VK1-ff-BBh">
-                                <rect key="frame" x="106.5" y="22" width="107" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="cloud" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VK1-ff-BBh">
+                                <rect key="frame" x="101.5" y="22" width="101" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TuH-hB-QFC">
-                                <rect key="frame" x="213.5" y="22" width="106.5" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="t" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TuH-hB-QFC">
+                                <rect key="frame" x="202.5" y="22" width="101.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -44,10 +44,10 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="Ni4-Ii-FRM" secondAttribute="trailing" id="Iuf-Bf-2aZ"/>
+                    <constraint firstAttribute="trailing" secondItem="Ni4-Ii-FRM" secondAttribute="trailing" constant="8" id="Iuf-Bf-2aZ"/>
                     <constraint firstItem="Ni4-Ii-FRM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Ywk-pe-s9j"/>
                     <constraint firstAttribute="bottom" secondItem="Ni4-Ii-FRM" secondAttribute="bottom" constant="8" id="bT2-Ee-Bip"/>
-                    <constraint firstItem="Ni4-Ii-FRM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="jfQ-rn-6Tw"/>
+                    <constraint firstItem="Ni4-Ii-FRM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="jfQ-rn-6Tw"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
