--- a/Forecasts/Moduls/SearchCity/SearchCityViewController.xib
+++ b/Forecasts/Moduls/SearchCity/SearchCityViewController.xib
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchCityViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchCityViewController" customModule="Forecasts" customModuleProvider="target">
             <connections>
+                <outlet property="cityTable" destination="plf-UK-Hon" id="LFP-Tp-VKl"/>
+                <outlet property="searchBar" destination="ax2-X0-aKz" id="z8E-ev-Qts"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -17,7 +20,31 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <searchBar contentMode="redraw" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ax2-X0-aKz">
+                    <rect key="frame" x="0.0" y="32" width="375" height="56"/>
+                    <textInputTraits key="textInputTraits"/>
+                    <scopeButtonTitles>
+                        <string>Title</string>
+                        <string>Title</string>
+                    </scopeButtonTitles>
+                </searchBar>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="plf-UK-Hon">
+                    <rect key="frame" x="0.0" y="104" width="375" height="563"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="ax2-X0-aKz" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="32" id="4Gc-fP-W6y"/>
+                <constraint firstItem="plf-UK-Hon" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="A4u-E8-b2d"/>
+                <constraint firstAttribute="bottom" secondItem="plf-UK-Hon" secondAttribute="bottom" id="ZjV-Id-Mcc"/>
+                <constraint firstItem="ax2-X0-aKz" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="bNj-zh-aoD"/>
+                <constraint firstAttribute="trailing" secondItem="plf-UK-Hon" secondAttribute="trailing" id="iun-fN-jPb"/>
+                <constraint firstItem="plf-UK-Hon" firstAttribute="top" secondItem="ax2-X0-aKz" secondAttribute="bottom" constant="16" id="jL4-OS-s47"/>
+                <constraint firstAttribute="trailing" secondItem="ax2-X0-aKz" secondAttribute="trailing" id="mYS-ZY-obM"/>
+            </constraints>
+            <point key="canvasLocation" x="39.200000000000003" y="46.326836581709152"/>
         </view>
     </objects>
 </document>
