--- a/Forecasts/Moduls/City/CityCell/CityCell.xib
+++ b/Forecasts/Moduls/City/CityCell/CityCell.xib
@@ -43,6 +43,10 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="nameCity" destination="8Lf-Vi-lAo" id="AbG-LV-bvl"/>
+                <outlet property="tempr" destination="Ig0-d9-5UG" id="aqI-Gr-dji"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
