commit 29_11_2019 17  add SafaryView, dayAPI

--- a/Forecasts/Moduls/City/CityCell/CityCell.xib
+++ b/Forecasts/Moduls/City/CityCell/CityCell.xib
@@ -42,6 +42,7 @@
                     <constraint firstItem="8Lf-Vi-lAo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="uqY-rr-ODa"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="nameCity" destination="8Lf-Vi-lAo" id="AbG-LV-bvl"/>
