--- a/Forecasts/Moduls/Weather/TimeForecastCell/TimeForecastCell.xib
+++ b/Forecasts/Moduls/Weather/TimeForecastCell/TimeForecastCell.xib
@@ -21,6 +21,7 @@
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="g1X-FO-AyU">
                         <rect key="frame" x="0.0" y="8" width="320" height="150"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="150" id="feT-jV-Xuc"/>
                         </constraints>
