--- a/Forecasts/Moduls/Weather/TimeForecastCell/TimeForecastCollectionCell/TimeForecastCollectionCell.xib
+++ b/Forecasts/Moduls/Weather/TimeForecastCell/TimeForecastCollectionCell/TimeForecastCollectionCell.xib
@@ -21,25 +21,28 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hh" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aK9-1i-HE5">
                         <rect key="frame" x="0.0" y="8" width="163" height="20.5"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="cloud" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X46-3K-cjw">
                         <rect key="frame" x="0.0" y="36.5" width="163" height="20.5"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tº" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GDk-7E-1MX">
                         <rect key="frame" x="0.0" y="65" width="163" height="20.5"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
-            <color key="backgroundColor" red="0.84372001799999996" green="1" blue="0.98321533350000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="aK9-1i-HE5" secondAttribute="trailing" id="7TZ-V4-3cb"/>
                 <constraint firstItem="GDk-7E-1MX" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Lps-51-EfX"/>
@@ -54,6 +57,11 @@
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="163" height="98"/>
+            <connections>
+                <outlet property="cloudLabel" destination="X46-3K-cjw" id="twC-qs-r0x"/>
+                <outlet property="hourLabel" destination="aK9-1i-HE5" id="xuq-Ur-97z"/>
+                <outlet property="temprLabel" destination="GDk-7E-1MX" id="3D2-Ot-nNT"/>
+            </connections>
             <point key="canvasLocation" x="144.80000000000001" y="109.74512743628186"/>
         </collectionViewCell>
     </objects>
