--- a/Forecasts/Moduls/Weather/WeatherViewController.xib
+++ b/Forecasts/Moduls/Weather/WeatherViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WeatherViewController" customModule="Forecasts" customModuleProvider="target">
             <connections>
+                <outlet property="activityIndicator" destination="hc8-xv-8mQ" id="Lbh-yV-SR1"/>
                 <outlet property="cityLabel" destination="HPC-Zl-gju" id="Je1-Q8-05z"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="weatherTable" destination="XVA-ny-iY2" id="BrM-5X-9bN"/>
@@ -21,15 +22,19 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sky" highlightedImage="sky" translatesAutoresizingMaskIntoConstraints="NO" id="1es-oZ-HRI">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HPC-Zl-gju">
                     <rect key="frame" x="0.0" y="32" width="375" height="68.5"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <fontDescription key="fontDescription" name="Georgia-BoldItalic" family="Georgia" pointSize="60"/>
                     <color key="textColor" red="0.02601820700036132" green="0.052902225078149921" blue="0.61932899746192893" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XVA-ny-iY2">
                     <rect key="frame" x="0.0" y="108.5" width="375" height="518.5"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
                 <stackView opaque="NO" contentMode="center" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2QY-Y5-Je1">
@@ -54,23 +59,37 @@
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" red="0.99197608232498169" green="0.99591785669326782" blue="0.99203497171401978" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </stackView>
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="hc8-xv-8mQ">
+                    <rect key="frame" x="169" y="315" width="37" height="37"/>
+                </activityIndicatorView>
             </subviews>
             <color key="backgroundColor" red="0.099994154050000006" green="1" blue="0.097882055230000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="HPC-Zl-gju" secondAttribute="trailing" id="2He-TE-J3i"/>
+                <constraint firstItem="hc8-xv-8mQ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="3fh-1r-ogR"/>
                 <constraint firstAttribute="bottom" secondItem="2QY-Y5-Je1" secondAttribute="bottom" id="6LB-7U-MUH"/>
                 <constraint firstItem="2QY-Y5-Je1" firstAttribute="top" secondItem="XVA-ny-iY2" secondAttribute="bottom" constant="8" id="BaE-zQ-vz3"/>
+                <constraint firstAttribute="bottom" secondItem="1es-oZ-HRI" secondAttribute="bottom" id="BrQ-Vk-sxS"/>
+                <constraint firstItem="1es-oZ-HRI" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Hdy-Dw-nMC"/>
+                <constraint firstItem="hc8-xv-8mQ" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="LWT-ZH-Isv"/>
                 <constraint firstItem="XVA-ny-iY2" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ME9-rz-8ti"/>
                 <constraint firstItem="XVA-ny-iY2" firstAttribute="top" secondItem="HPC-Zl-gju" secondAttribute="bottom" constant="8" id="MYo-Oz-lez"/>
                 <constraint firstAttribute="trailing" secondItem="2QY-Y5-Je1" secondAttribute="trailing" id="OEl-f5-g5Q"/>
+                <constraint firstItem="1es-oZ-HRI" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="UB1-5V-Gu8"/>
+                <constraint firstAttribute="trailing" secondItem="1es-oZ-HRI" secondAttribute="trailing" id="VFw-P7-siB"/>
                 <constraint firstAttribute="trailing" secondItem="XVA-ny-iY2" secondAttribute="trailing" id="eG5-Jy-7QM"/>
+                <constraint firstItem="1es-oZ-HRI" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="g5F-1v-iSj"/>
                 <constraint firstItem="HPC-Zl-gju" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="32" id="j65-Wa-PeE"/>
                 <constraint firstItem="2QY-Y5-Je1" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ogO-nE-eyi"/>
                 <constraint firstItem="HPC-Zl-gju" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="pBG-b0-oiX"/>
+                <constraint firstItem="1es-oZ-HRI" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="pfL-CL-tSK"/>
             </constraints>
             <point key="canvasLocation" x="40.799999999999997" y="46.326836581709152"/>
         </view>
     </objects>
+    <resources>
+        <image name="sky" width="800" height="1422"/>
+    </resources>
 </document>
