--- a/Forecasts/Moduls/SearchCity/SearchCityCell/SearchCity.xib
+++ b/Forecasts/Moduls/SearchCity/SearchCityCell/SearchCity.xib
@@ -21,11 +21,13 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dir-wx-09z">
                         <rect key="frame" x="24" y="11" width="280" height="42"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="dir-wx-09z" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="Cbr-bw-Orw"/>
                     <constraint firstItem="dir-wx-09z" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="JHw-ni-xeV"/>
@@ -33,6 +35,7 @@
                     <constraint firstItem="dir-wx-09z" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="elI-Oz-boW"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="nameCity" destination="dir-wx-09z" id="MDt-3Q-Mh9"/>
