--- a/Forecasts/Moduls/Weather/AdditionInfoCell/AdditionInfoCell.xib
+++ b/Forecasts/Moduls/Weather/AdditionInfoCell/AdditionInfoCell.xib
@@ -21,11 +21,13 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8NK-Ae-c10">
                         <rect key="frame" x="24" y="19" width="272" height="41"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstAttribute="trailingMargin" secondItem="8NK-Ae-c10" secondAttribute="trailing" constant="8" id="DHd-X4-m9g"/>
                     <constraint firstItem="8NK-Ae-c10" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="OVh-I7-MEk"/>
@@ -33,6 +35,7 @@
                     <constraint firstAttribute="bottomMargin" secondItem="8NK-Ae-c10" secondAttribute="bottom" constant="8" id="mxO-t4-the"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="addInfoLabel" destination="8NK-Ae-c10" id="dU9-fv-2Yv"/>
