--- a/Forecasts/Moduls/Weather/CurrentTempCell/CurrentTempCell.xib
+++ b/Forecasts/Moduls/Weather/CurrentTempCell/CurrentTempCell.xib
@@ -21,12 +21,13 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tº" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B2d-3X-wd1">
                         <rect key="frame" x="16" y="27" width="288" height="74"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                         <color key="textColor" red="0.026018207000000002" green="0.052902225079999997" blue="0.61932899750000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <color key="backgroundColor" red="0.96165824892650031" green="1" blue="0.99263635341301859" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="B2d-3X-wd1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Hd0-L0-uPV"/>
                     <constraint firstAttribute="bottomMargin" secondItem="B2d-3X-wd1" secondAttribute="bottom" constant="16" id="KqI-Cz-6r3"/>
@@ -34,6 +35,7 @@
                     <constraint firstAttribute="trailingMargin" secondItem="B2d-3X-wd1" secondAttribute="trailing" id="zY3-U2-vK1"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="temprLabel" destination="B2d-3X-wd1" id="upq-Ad-qRq"/>
