--- a/Forecasts/Moduls/Weather/TimeForecastCell/TimeForecastCell.xib
+++ b/Forecasts/Moduls/Weather/TimeForecastCell/TimeForecastCell.xib
@@ -33,7 +33,7 @@
                         </collectionViewFlowLayout>
                     </collectionView>
                 </subviews>
-                <color key="backgroundColor" red="1" green="0.60119118969999996" blue="0.10783870769999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="g1X-FO-AyU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="7Mf-dw-yLL"/>
                     <constraint firstItem="g1X-FO-AyU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Hud-Mp-EBC"/>
@@ -41,6 +41,7 @@
                     <constraint firstAttribute="trailing" secondItem="g1X-FO-AyU" secondAttribute="trailing" id="Vjt-L2-v4A"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="collectionTimeWeather" destination="g1X-FO-AyU" id="5JD-Qg-wXy"/>
