--- a/Forecasts/Moduls/SearchCity/SearchCityViewController.xib
+++ b/Forecasts/Moduls/SearchCity/SearchCityViewController.xib
@@ -25,8 +25,9 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sky" highlightedImage="sky" translatesAutoresizingMaskIntoConstraints="NO" id="x9B-X0-xRQ">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                 </imageView>
-                <searchBar contentMode="redraw" placeholder="Select City" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ax2-X0-aKz">
+                <searchBar contentMode="redraw" placeholder="Select City more 2 character" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ax2-X0-aKz">
                     <rect key="frame" x="0.0" y="32" width="375" height="56"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <textInputTraits key="textInputTraits"/>
                     <scopeButtonTitles>
                         <string>Title</string>
