--- a/Forecasts/Moduls/Weather/TimeForecastCell/TimeForecastCell.xib
+++ b/Forecasts/Moduls/Weather/TimeForecastCell/TimeForecastCell.xib
@@ -12,41 +12,46 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TimeForecastCell" rowHeight="255" id="KGk-i7-Jjw" customClass="TimeForecastCell" customModule="Forecasts" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="196"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TimeForecastCell" rowHeight="191" id="KGk-i7-Jjw" customClass="TimeForecastCell" customModule="Forecasts" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="400" height="191"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" heightSizable="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="195.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="400" height="190.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="g1X-FO-AyU">
-                        <rect key="frame" x="0.0" y="8" width="320" height="150"/>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="AVC-gm-jVH">
+                        <rect key="frame" x="0.0" y="0.0" width="400" height="150"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="150" id="feT-jV-Xuc"/>
+                            <constraint firstAttribute="height" constant="150" id="l9b-Ih-acg"/>
                         </constraints>
-                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="oGr-uj-x7I">
-                            <size key="itemSize" width="50" height="100"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hB6-Ia-qmJ">
+                            <size key="itemSize" width="200" height="200"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
+                        <connections>
+                            <outlet property="dataSource" destination="-1" id="h5e-T6-nB0"/>
+                            <outlet property="delegate" destination="-1" id="FZL-6J-Vd9"/>
+                        </connections>
                     </collectionView>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="g1X-FO-AyU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="7Mf-dw-yLL"/>
-                    <constraint firstItem="g1X-FO-AyU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Hud-Mp-EBC"/>
-                    <constraint firstAttribute="bottom" secondItem="g1X-FO-AyU" secondAttribute="bottom" constant="8" id="RvS-md-ZZF"/>
-                    <constraint firstAttribute="trailing" secondItem="g1X-FO-AyU" secondAttribute="trailing" id="Vjt-L2-v4A"/>
+                    <constraint firstItem="AVC-gm-jVH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="FPe-aR-D8R"/>
+                    <constraint firstItem="AVC-gm-jVH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="jXo-iv-ALy"/>
+                    <constraint firstAttribute="trailing" secondItem="AVC-gm-jVH" secondAttribute="trailing" id="txW-jf-QE9"/>
+                    <constraint firstAttribute="bottom" secondItem="AVC-gm-jVH" secondAttribute="bottom" id="y2i-8l-qNj"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="collectionTimeWeather" destination="g1X-FO-AyU" id="5JD-Qg-wXy"/>
+                <outlet property="collectionLayout" destination="hB6-Ia-qmJ" id="n3H-2x-Xkr"/>
+                <outlet property="collectionTimeWeather" destination="AVC-gm-jVH" id="AN5-PI-fac"/>
             </connections>
-            <point key="canvasLocation" x="132.80000000000001" y="180.80959520239881"/>
+            <point key="canvasLocation" x="89.599999999999994" y="122.78860569715144"/>
         </tableViewCell>
     </objects>
 </document>
