--- a/Forecasts/Moduls/Weather/TimeForecastCell/TimeForecastCollectionCell/TimeForecastCollectionCell.xib
+++ b/Forecasts/Moduls/Weather/TimeForecastCell/TimeForecastCollectionCell/TimeForecastCollectionCell.xib
@@ -13,29 +13,41 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TimeForecastCollectionCell" id="gTV-IL-0wX" customClass="TimeForecastCollectionCell" customModule="Forecasts" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="163" height="98"/>
-            <autoresizingMask key="autoresizingMask"/>
+            <rect key="frame" x="0.0" y="0.0" width="150" height="100"/>
+            <autoresizingMask key="autoresizingMask" heightSizable="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="163" height="98"/>
+                <rect key="frame" x="0.0" y="0.0" width="150" height="100"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hh" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aK9-1i-HE5">
-                        <rect key="frame" x="0.0" y="8" width="163" height="20.5"/>
+                        <rect key="frame" x="0.0" y="11.5" width="150" height="20.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20.5" id="KoT-aB-orV"/>
+                            <constraint firstAttribute="width" constant="150" id="Ykl-1H-28n"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="cloud" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X46-3K-cjw">
-                        <rect key="frame" x="0.0" y="36.5" width="163" height="20.5"/>
+                        <rect key="frame" x="0.0" y="40" width="150" height="20.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="150" id="WqQ-KU-Yhg"/>
+                            <constraint firstAttribute="height" constant="20.5" id="fg3-3e-1m0"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tº" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GDk-7E-1MX">
-                        <rect key="frame" x="0.0" y="65" width="163" height="20.5"/>
+                        <rect key="frame" x="0.0" y="68.5" width="150" height="20.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20.5" id="IKP-z9-r0A"/>
+                            <constraint firstAttribute="width" constant="150" id="MPf-KL-MUy"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -44,25 +56,26 @@
             </view>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="aK9-1i-HE5" secondAttribute="trailing" id="7TZ-V4-3cb"/>
-                <constraint firstItem="GDk-7E-1MX" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Lps-51-EfX"/>
-                <constraint firstAttribute="trailing" secondItem="GDk-7E-1MX" secondAttribute="trailing" id="PQU-qi-mH5"/>
-                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="GDk-7E-1MX" secondAttribute="bottom" constant="8" id="UTM-sN-sLN"/>
+                <constraint firstItem="X46-3K-cjw" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="8GG-Vg-4Lh"/>
+                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="GDk-7E-1MX" secondAttribute="bottom" constant="8" id="BG2-aP-Ij8"/>
+                <constraint firstItem="X46-3K-cjw" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="GRm-fH-0HO"/>
+                <constraint firstItem="aK9-1i-HE5" firstAttribute="top" relation="greaterThanOrEqual" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="If5-Wi-VKq"/>
+                <constraint firstAttribute="trailing" secondItem="GDk-7E-1MX" secondAttribute="trailing" id="Nj3-eU-cGA"/>
+                <constraint firstItem="GDk-7E-1MX" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Qxd-0X-Ehz"/>
+                <constraint firstAttribute="trailing" secondItem="aK9-1i-HE5" secondAttribute="trailing" id="Zbf-g0-f06"/>
+                <constraint firstItem="aK9-1i-HE5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="cJg-Ck-6Mp"/>
                 <constraint firstItem="X46-3K-cjw" firstAttribute="top" secondItem="aK9-1i-HE5" secondAttribute="bottom" constant="8" id="cwo-AF-RCL"/>
-                <constraint firstItem="aK9-1i-HE5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="huD-34-A4p"/>
-                <constraint firstItem="X46-3K-cjw" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="lB8-yx-4WG"/>
-                <constraint firstAttribute="trailing" secondItem="X46-3K-cjw" secondAttribute="trailing" id="mST-Ra-siw"/>
                 <constraint firstItem="GDk-7E-1MX" firstAttribute="top" secondItem="X46-3K-cjw" secondAttribute="bottom" constant="8" id="oQ3-R3-wjT"/>
-                <constraint firstItem="aK9-1i-HE5" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="qz4-D3-Iui"/>
+                <constraint firstAttribute="trailing" secondItem="X46-3K-cjw" secondAttribute="trailing" id="y3Q-Fe-kJ0"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="163" height="98"/>
+            <size key="customSize" width="163" height="12"/>
             <connections>
                 <outlet property="cloudLabel" destination="X46-3K-cjw" id="twC-qs-r0x"/>
                 <outlet property="hourLabel" destination="aK9-1i-HE5" id="xuq-Ur-97z"/>
                 <outlet property="temprLabel" destination="GDk-7E-1MX" id="3D2-Ot-nNT"/>
             </connections>
-            <point key="canvasLocation" x="144.80000000000001" y="109.74512743628186"/>
+            <point key="canvasLocation" x="144" y="71.064467766116948"/>
         </collectionViewCell>
     </objects>
 </document>
